[package]
name = "daily-server"
version = "0.1.0"
edition = "2024"

[dependencies]
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.46.1", features = ["full"] }
warp = "0.3.7"
